# cpp_chat

./: .gitmodules  CMakeLists.txt  README.md  TODO
dependencies/: CMakeLists.txt
doc/: design.md
include/common/: io_multiplexing.hpp  log_util.hpp  net_common.hpp  protocol.hpp  utilities.hpp
include/io_multiplexor/: EpollMultiplexor.hpp  IoMultiplexor.hpp  IoMultiplexorFactory.hpp  KqueueMultiplexor.hpp
src/: .clang_check_config  CMakeLists.txt  test.cpp
src/client/: CMakeLists.txt  Client.cpp  Client.hpp  test.cpp
src/common/: CMakeLists.txt  net_common.cpp  utilities.cpp
src/io_multiplexor/: CMakeLists.txt  EpollMultiplexor.cpp  KqueueMultiplexor.cpp
src/io_multiplexor/tests/: CMakeLists.txt  io_multiplexor_tests.cpp
src/server/: Acceptor.cpp  Acceptor.hpp  BroadCastWorker.cpp  BroadCaster.cpp  BroadCaster.hpp  CMakeLists.txt  Server.cpp  Server.hpp  main.cpp  server_main.cpp
src/server/tests/: CMakeLists.txt  broadcaster_tests.cpp
